tests/semantic_errors/andrei16_3.tl
require "ifj21"

global name_aa : function (integer)
function name    (a : number) end
function name    (a : number) : string end

function main()
end

main()
